adding the identity module
